--- a/lab-06.Rmd
+++ b/lab-06.Rmd
@@ -93,7 +93,7 @@ _Do derivation on paper, unless you know how to write LaTeX code_
 # Write gmean() command
 gmean <- function(x){
   sum_lnx <- sum(log(x))
-  x_g <- exp(sum_lnx/length(x))
+  x_g <- exp(mean(sum_lnx))
   return(x_g)
 }
 
@@ -104,17 +104,17 @@ gmean <- function(x){
 
 ```{r, error = TRUE}
 
-#test_data <- list(
-  #test1 = c(2.1, 3.8, 4.2),
-  #test2 = c(1, 10, 100, 1000),
-  #test3 = c(0, 1, 4),
-  #test4 = c(0.38,  0.94, -1.56),
-  #test5 = c(TRUE, TRUE),
-  #test6 = c("6", '7', "8")
-#)
+test_data <- list(
+  test1 = c(2.1, 3.8, 4.2),
+  test2 = c(1, 10, 100, 1000),
+  test3 = c(0, 1, 4),
+  test4 = c(0.38,  0.94, -1.56),
+  test5 = c(TRUE, TRUE),
+  test6 = c("6", '7', "8")
+)
 
 
-# Create for loop to test gmean() on the above examples
+ #Create for loop to test gmean() on the above examples
 #for(i in test_data){
   #print(gmean(i))
 #}
@@ -139,7 +139,17 @@ gmean <- function(x){
 
 
 # Copy your code from Ex 5 to test your new command
-
+test_data <- list(
+  test1 = c(2.1, 3.8, 4.2),
+  test2 = c(1, 10, 100, 1000),
+  test3 = c(0, 1, 4),
+  test4 = c(0.38,  0.94, -1.56),
+  test5 = c(TRUE, TRUE),
+  test6 = c("6", '7', "8")
+)
+#for(i in test_data){
+  #print(gmean(i))
+#}
 
 
 
@@ -150,6 +160,15 @@ gmean <- function(x){
 
 ```{r}
 # Overall table_mm geometic mean?
+diamonds %>%
+  filter(depth_pct != 0,
+         table_pct != 0,
+         length_mm != 0,
+         width_mm != 0,
+         depth_mm != 0) %>%
+  mutate(table_mm = table_pct * width_mm / 100) %>%
+  summarise(gmean(table_mm))
+
 
 
 
@@ -157,7 +176,15 @@ gmean <- function(x){
 
 
 # table_mm geometic mean within each clarity category
-
+diamonds %>%
+  filter(depth_pct != 0,
+         table_pct != 0,
+         length_mm != 0,
+         width_mm != 0,
+         depth_mm != 0) %>%
+  mutate(table_mm = table_pct * width_mm / 100) %>%
+  group_by(clarity) %>%
+  summarise(gmean(table_mm))
 
 
 
@@ -173,9 +200,21 @@ _Add your comment here_
 ```{r}
 # Create gmean2() that computes the geometric mean 
 #   that uses the original definition
-
-
-
+gmean2 <- function(x){
+  g_2 = prod(x)^(1/length(x))
+  return(g_2)
+}
+test_data <- list(
+  test1 = c(2.1, 3.8, 4.2),
+  test2 = c(1, 10, 100, 1000),
+  test3 = c(0, 1, 4),
+  test4 = c(0.38,  0.94, -1.56),
+  test5 = c(TRUE, TRUE),
+  test6 = c("6", '7', "8")
+)
+#for(i in test_data){
+  #print(gmean2(i))
+#}
 
 
 
@@ -186,7 +225,9 @@ _Add your comment here_
 
 ```{r}
 # Create a function that computes the harmonic mean
-
+hmean <- function(x){
+  
+}
 
 
 
